[Apicurio] Please merge generated API project (#10)
* CNCF Schema Registry 0.1

* Delete JaxRsApplication.java
